v2.6.5.5 - Added a green bar display for frame caches in the timeline for 
	   both movies and sequences.
	 - Bug fixed a hanging problem when exiting while playing backwards
	   movie with audio.
v2.6.5.4 - Bug fixed some problems with loop playback of movie files in EDL.  
	   Still not perfect.  There are still sync problems after 
	   several loops specially with ping-pong (swing)
	   playback.
	 - Bug fixed a hanging of the playback when showing individual images
	   all in an EDL edit.
	 - Bug fixed F11 fullscreen not centering the image on Windows.
	 - Made fullscreen presentation (F12) support covering the taskbar on
	   Windows.
	 - Made fullscreen and presentation modes be passed across the network.

v2.6.5.3 - Made preloading of sequences being shown while idle.
	 - Fixed a crash of Cut tool in EDL when the cut happened in inactive
	   reel.
	 - Troubleshoot playback of EDL movies in background.
	 - Added a BG button to EDL Edit window to more easily set the
	   background image.

v2.6.5.2 - Upgraded to latest ffmpeg, libx264.
	 - Fixed swing looping in short movie files which could hang the 
	   viewer.
	 - Made play backwards faster due to increase in seek speed.
	 - Fixed wrong calculation of frame differences in backwards playback.

v2.6.5.1 - Fixed subtitles displaying in black only.
	 - Made grease pencil a property of the image instead of the viewer.
	 - Grease pencil drawings are saved and loaded to/from a reel.
	 - Grease pencil drawings are synced over TCP/IP on connection.
	 - GL Snapshot now can save a sequence of frames.
	 - Added The Color Transformation Language manual ( CtlManual.pdf )
	   to the docs folder.
	 - Made exr loader a tiny bit faster when it is a multiview image.
	 - Bug fixed a minor memory leak when quitting in color channel string.
	 - EDL timeline now supports play and step hotkeys.
	 - Fixed EXR loader not loading exif attributes.
	 - Fixed EXR saver to save all known attributes of image, except tiling.