@@ -49,7 +49,7 @@ namespace mrv
 
 
 
-  static const char* kVersion = "2.6.5.4 - Built " __DATE__ " " __TIME__;
+  static const char* kVersion = "2.6.5.5 - Built " __DATE__ " " __TIME__;
 
 
   struct FormatInfo
